--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,29 @@
-/* You can add global styles to this file, and also import other style files */
+/container {
+    max-width: 600px;
+    margin: 0 auto;
+    text-align: center;
+    padding: 40px;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    }
+    
+    h1 {
+    font-size: 2rem;
+    margin-bottom: 20px;
+    }
+    
+    form {
+    display: flex;
+    flex-direction: column;
+    }
+    
+    mat-form-field {
+    margin-bottom: 20px;
+    width: 100%;
+    }
+    
+    button {
+    margin-top: 20px;
+    width: 100%;
+    }* You can add global styles to this file, and also import other style files */
