--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
-/container {
+    container {
     max-width: 600px;
     margin: 0 auto;
     text-align: center;
@@ -26,4 +26,4 @@
     button {
     margin-top: 20px;
     width: 100%;
-    }* You can add global styles to this file, and also import other style files */
+    }
